# job-tracker

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  build.sh  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: run-container-AirFrance.yml  run-container-Apple.yml  run-container-LinkedIn.yml  run-container-VIE.yml  run-container-source-WelcomeToTheJungle.yml  run-container.yml  test.yml  validate-PR.yml  versioning.yml
scripts/: launch_chromium.sh  restart_chromium.sh  stop_chromium.sh
services/notifications/: sms_alert.py
services/processing/src/: offer_processor.py
services/scraping/: scraper.py
services/scraping/src/: airfrance.py  apple.py  config.py  linked.py  linked_url_generate.py  vie.py  welcome_to_the_jungle.py
services/scraping/src/base_model/: README.md  job_offer.py  job_scraper_base.py
services/scraping/tests/: test_id_generation.py
services/storage/scripts/: retrieve_databse_schema.sh
services/storage/src/: notion_integration.py
services/storage/tests/: test_notion_integration.py
src/: main.py  notion_client.py  notion_integration.py  offer_processor.py  scraper.py  selenium_script.py  sms_alert.py
src/job_scrapers/: airfrance.py  apple.py  job_scraper_base.py  vie.py  welcome_to_the_jungle.py
tests/unit/: test_airfrance_scraper.py  test_apple_scraper.py  test_notion_client.py  test_selenium_script.py  test_sms_api.py  test_vie_scraper.py  test_wtj_scraper.py
